--- a/style.css
+++ b/style.css
@@ -1377,10 +1377,10 @@ html, body {
 
 .talk-base .tk-puff .tk-content.tks-s {
   z-index: auto;
-  border-top-left-radius: 39% 42%;
-  border-top-right-radius: 42% 37%;
-  border-bottom-right-radius: 41% 39%;
-  border-bottom-left-radius: 40% 42%;
+  border-top-left-radius: 44% 41%;
+  border-top-right-radius: 36% 43%;
+  border-bottom-right-radius: 40% 43%;
+  border-bottom-left-radius: 41% 45%;
 }
 
 .talk-base .tk-puff .tk-content.tks-s::before, .talk-base .tk-puff .tk-content.tks-s::after {
@@ -1398,29 +1398,29 @@ html, body {
   left: 5%;
   -webkit-transform: rotate(13deg);
           transform: rotate(13deg);
-  border-top-left-radius: 37% 45%;
-  border-top-right-radius: 36% 42%;
-  border-bottom-right-radius: 43% 41%;
-  border-bottom-left-radius: 36% 42%;
+  border-top-left-radius: 38% 45%;
+  border-top-right-radius: 42% 44%;
+  border-bottom-right-radius: 38% 43%;
+  border-bottom-left-radius: 36% 44%;
 }
 
 .talk-base .tk-puff .tk-content.tks-s::after {
   width: 90%;
   left: 5%;
-  -webkit-transform: rotate(-11deg);
-          transform: rotate(-11deg);
-  border-top-left-radius: 45% 39%;
-  border-top-right-radius: 36% 36%;
-  border-bottom-right-radius: 39% 41%;
-  border-bottom-left-radius: 39% 43%;
+  -webkit-transform: rotate(-12deg);
+          transform: rotate(-12deg);
+  border-top-left-radius: 40% 39%;
+  border-top-right-radius: 45% 45%;
+  border-bottom-right-radius: 45% 41%;
+  border-bottom-left-radius: 41% 39%;
 }
 
 .talk-base .tk-puff .tk-content.tks-m {
   z-index: auto;
-  border-top-left-radius: 44% 37%;
-  border-top-right-radius: 37% 38%;
-  border-bottom-right-radius: 41% 29%;
-  border-bottom-left-radius: 36% 34%;
+  border-top-left-radius: 41% 30%;
+  border-top-right-radius: 42% 34%;
+  border-bottom-right-radius: 36% 36%;
+  border-bottom-left-radius: 41% 37%;
 }
 
 .talk-base .tk-puff .tk-content.tks-m::before, .talk-base .tk-puff .tk-content.tks-m::after {
@@ -1434,29 +1434,29 @@ html, body {
 }
 
 .talk-base .tk-puff .tk-content.tks-m::before {
-  -webkit-transform: rotate(9deg);
-          transform: rotate(9deg);
-  border-top-left-radius: 48% 39%;
-  border-top-right-radius: 41% 36%;
-  border-bottom-right-radius: 44% 35%;
-  border-bottom-left-radius: 49% 36%;
+  -webkit-transform: rotate(8deg);
+          transform: rotate(8deg);
+  border-top-left-radius: 42% 38%;
+  border-top-right-radius: 45% 33%;
+  border-bottom-right-radius: 45% 34%;
+  border-bottom-left-radius: 48% 39%;
 }
 
 .talk-base .tk-puff .tk-content.tks-m::after {
-  -webkit-transform: rotate(-12deg);
-          transform: rotate(-12deg);
-  border-top-left-radius: 44% 35%;
-  border-top-right-radius: 47% 35%;
-  border-bottom-right-radius: 42% 32%;
-  border-bottom-left-radius: 47% 34%;
+  -webkit-transform: rotate(-10deg);
+          transform: rotate(-10deg);
+  border-top-left-radius: 47% 35%;
+  border-top-right-radius: 50% 34%;
+  border-bottom-right-radius: 44% 38%;
+  border-bottom-left-radius: 46% 36%;
 }
 
 .talk-base .tk-puff .tk-content.tks-l {
   z-index: auto;
-  border-top-left-radius: 32% 28%;
-  border-top-right-radius: 37% 23%;
-  border-bottom-right-radius: 39% 27%;
-  border-bottom-left-radius: 32% 28%;
+  border-top-left-radius: 37% 25%;
+  border-top-right-radius: 38% 27%;
+  border-bottom-right-radius: 38% 26%;
+  border-bottom-left-radius: 37% 22%;
 }
 
 .talk-base .tk-puff .tk-content.tks-l::before, .talk-base .tk-puff .tk-content.tks-l::after {
@@ -1472,19 +1472,19 @@ html, body {
 .talk-base .tk-puff .tk-content.tks-l::before {
   -webkit-transform: rotate(6deg);
           transform: rotate(6deg);
-  border-top-left-radius: 42% 27%;
-  border-top-right-radius: 49% 34%;
-  border-bottom-right-radius: 45% 31%;
-  border-bottom-left-radius: 49% 27%;
+  border-top-left-radius: 49% 35%;
+  border-top-right-radius: 41% 35%;
+  border-bottom-right-radius: 48% 29%;
+  border-bottom-left-radius: 49% 26%;
 }
 
 .talk-base .tk-puff .tk-content.tks-l::after {
-  -webkit-transform: rotate(-7deg);
-          transform: rotate(-7deg);
-  border-top-left-radius: 47% 26%;
-  border-top-right-radius: 42% 28%;
-  border-bottom-right-radius: 42% 27%;
-  border-bottom-left-radius: 48% 26%;
+  -webkit-transform: rotate(-9deg);
+          transform: rotate(-9deg);
+  border-top-left-radius: 48% 31%;
+  border-top-right-radius: 45% 33%;
+  border-bottom-right-radius: 50% 35%;
+  border-bottom-left-radius: 41% 27%;
 }
 
 .talk-base .tk-puff .tk-content .tkc-p {
@@ -1785,10 +1785,10 @@ html, body {
     display: block;
     position: fixed;
     z-index: auto;
-    border-top-left-radius: 38% 37%;
-    border-top-right-radius: 39% 38%;
-    border-bottom-right-radius: 37% 37%;
-    border-bottom-left-radius: 39% 45%;
+    border-top-left-radius: 43% 45%;
+    border-top-right-radius: 38% 44%;
+    border-bottom-right-radius: 44% 41%;
+    border-bottom-left-radius: 45% 42%;
     -webkit-backdrop-filter: blur(3px);
             backdrop-filter: blur(3px);
   }
@@ -1806,12 +1806,12 @@ html, body {
     top: 5%;
     width: 110%;
     height: 90%;
-    -webkit-transform: rotate(25deg);
-            transform: rotate(25deg);
-    border-top-left-radius: 47% 57%;
-    border-top-right-radius: 53% 62%;
-    border-bottom-right-radius: 52% 58%;
-    border-bottom-left-radius: 48% 60%;
+    -webkit-transform: rotate(23deg);
+            transform: rotate(23deg);
+    border-top-left-radius: 55% 56%;
+    border-top-right-radius: 53% 60%;
+    border-bottom-right-radius: 51% 57%;
+    border-bottom-left-radius: 46% 58%;
     background-color: red;
   }
   #navimenu .navimenu--area::after {
@@ -1821,20 +1821,20 @@ html, body {
     height: 110%;
     -webkit-transform: rotate(-24deg);
             transform: rotate(-24deg);
-    border-top-left-radius: 48% 56%;
-    border-top-right-radius: 55% 56%;
-    border-bottom-right-radius: 48% 63%;
-    border-bottom-left-radius: 47% 62%;
+    border-top-left-radius: 49% 62%;
+    border-top-right-radius: 54% 62%;
+    border-bottom-right-radius: 52% 56%;
+    border-bottom-left-radius: 51% 61%;
     background-color: green;
   }
   #navimenu #navimenu--on:not(:checked) ~ .navimenu--area {
     background-color: #fdfffd;
     bottom: 5%;
     right: 5%;
-    width: 15vw;
-    height: 15vw;
-    -webkit-filter: drop-shadow(0.5px 0.5px 0px #000) drop-shadow(-0.5px 0.5px 0px #000) drop-shadow(0.5px -0.5px 0px #000) drop-shadow(-0.5px -0.5px 0px #000);
-            filter: drop-shadow(0.5px 0.5px 0px #000) drop-shadow(-0.5px 0.5px 0px #000) drop-shadow(0.5px -0.5px 0px #000) drop-shadow(-0.5px -0.5px 0px #000);
+    width: 12vw;
+    height: 12vw;
+    -webkit-filter: drop-shadow(0.5px 0.5px 0px #000) drop-shadow(-0.5px 0.5px 0px #000) drop-shadow(0.5px -0.5px 0px #000) drop-shadow(-0.5px -0.5px 0px #000) drop-shadow(3px 3px 3px rgba(0, 0, 0, 0.9));
+            filter: drop-shadow(0.5px 0.5px 0px #000) drop-shadow(-0.5px 0.5px 0px #000) drop-shadow(0.5px -0.5px 0px #000) drop-shadow(-0.5px -0.5px 0px #000) drop-shadow(3px 3px 3px rgba(0, 0, 0, 0.9));
   }
   #navimenu #navimenu--on:not(:checked) ~ .navimenu--area::before, #navimenu #navimenu--on:not(:checked) ~ .navimenu--area::after {
     background-color: #fdfffd;
@@ -1846,11 +1846,82 @@ html, body {
     width: 100%;
     height: 100%;
     border-radius: 0;
-    -webkit-filter: drop-shadow(0px 0px 0px #0000) drop-shadow(0px 0px 0px #0000) drop-shadow(0px 0px 0px #0000) drop-shadow(0px 0px 0px #0000);
-            filter: drop-shadow(0px 0px 0px #0000) drop-shadow(0px 0px 0px #0000) drop-shadow(0px 0px 0px #0000) drop-shadow(0px 0px 0px #0000);
+    -webkit-filter: none;
+            filter: none;
   }
   #navimenu #navimenu--on:checked ~ .navimenu--area::before, #navimenu #navimenu--on:checked ~ .navimenu--area::after {
     background-color: rgba(253, 255, 253, 0);
+  }
+  #navimenu .navimenu--area .tglbutton-menu {
+    position: absolute;
+  }
+  #navimenu #navimenu--on:not(:checked) ~ .navimenu--area .tglbutton-menu {
+    left: 15%;
+    top: 15%;
+    width: 70%;
+    height: 70%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+  }
+  #navimenu #navimenu--on:not(:checked) ~ .navimenu--area .tglbutton-menu .tglbutton-menu--bar1,
+  #navimenu #navimenu--on:not(:checked) ~ .navimenu--area .tglbutton-menu .tglbutton-menu--bar2,
+  #navimenu #navimenu--on:not(:checked) ~ .navimenu--area .tglbutton-menu .tglbutton-menu--bar3 {
+    display: block;
+    width: 100%;
+    height: 20%;
+    background-color: #000;
+    border-radius: 3px;
+  }
+  #navimenu #navimenu--on:checked ~ .navimenu--area .tglbutton-menu {
+    right: 5%;
+    bottom: 5%;
+    width: 10vw;
+    height: 10vw;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+  }
+  #navimenu #navimenu--on:checked ~ .navimenu--area .tglbutton-menu .tglbutton-menu--bar1,
+  #navimenu #navimenu--on:checked ~ .navimenu--area .tglbutton-menu .tglbutton-menu--bar2,
+  #navimenu #navimenu--on:checked ~ .navimenu--area .tglbutton-menu .tglbutton-menu--bar3 {
+    display: block;
+    width: 100%;
+    height: 20%;
+    background-color: #000;
+    border-radius: 3px;
+  }
+  #navimenu #navimenu--on:checked ~ .navimenu--area .tglbutton-menu .tglbutton-menu--bar1 {
+    -webkit-transform: translateY(5vw) rotate(765deg);
+            transform: translateY(5vw) rotate(765deg);
+  }
+  #navimenu #navimenu--on:checked ~ .navimenu--area .tglbutton-menu .tglbutton-menu--bar2 {
+    position: absolute;
+    width: 10vw;
+    height: 10vw;
+    top: 10%;
+    left: 0;
+    border-radius: 50%;
+    background-color: transparent;
+    border: solid 2px #000;
+  }
+  #navimenu #navimenu--on:checked ~ .navimenu--area .tglbutton-menu .tglbutton-menu--bar3 {
+    -webkit-transform: translateY(-5vw) translateY(100%) rotate(-765deg);
+            transform: translateY(-5vw) translateY(100%) rotate(-765deg);
   }
 }
 
