--- a/sass/layout/_l-menu.scss
+++ b/sass/layout/_l-menu.scss
@@ -4,6 +4,20 @@
     }
 }
 @include mq(tb) {
-    @include cloudpouup(navimenu);
-    
+    @include cloudpouup(navimenu,12vw);
+
+
+    #navimenu{
+        
+        .navimenu--area{
+            @include tglbutton-menu-base(tglbutton-menu);
+        }
+        
+        #navimenu--on:not(:checked) ~ .navimenu--area{
+            @include tglbutton-menu-off(tglbutton-menu);
+        }
+        #navimenu--on:checked ~ .navimenu--area{
+            @include tglbutton-menu-on(tglbutton-menu,10vw);
+        }
+    }
 }
